--- a/trunk/CEP/CPA/PSS3/MNS/src/Makefile.am
+++ b/trunk/CEP/CPA/PSS3/MNS/src/Makefile.am
@@ -65,7 +65,8 @@ MeqStatUVW.cc					\
 MeqStoredParmPolc.cc				\
 MeqWsrtInt.cc					\
 MeqWsrtPoint.cc					\
-ParmTable.cc					
+ParmTable.cc					\
+PerfProfile.cc
 
 #EXTRA_DIST		=			\
 #Beam.m						\
