--- a/CEP/CPA/uvplot/configure.in
+++ b/CEP/CPA/uvplot/configure.in
@@ -58,12 +58,14 @@ lofar_QATOOLS
 lofar_DOCXX
 dnl lofar_BASESIM
 lofar_AIPSPP(1)
+lofar_BLITZ(1)
 lofar_QT(1)
 lofar_PACKAGE(Common)
 
 lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
 lofar_PACKAGE(DMI)
-lofar_PACKAGE(CEP/CPA/UVD)
+lofar_PACKAGE(CEP/CPA/VisCube)
+lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
 
 dnl
 dnl Output Makefiles
