--- a/CEP/CPA/uvplot/src/Makefile.am
+++ b/CEP/CPA/uvplot/src/Makefile.am
@@ -10,9 +10,9 @@ libuvplot_la_SOURCES := UVPGraphSettings.cc    \
                         UVPDataAtom.cc         \
                         UVPDataAtomVector.cc   \
                         UVPDataCacheElement.cc \
-                        UVPDataTransferWP.cc   \
-	                     UVPMessagesToFileWP.cc \
-                        UVPPVDInput.cc         \
+#                        UVPDataTransferWP.cc   \
+# 	                     UVPMessagesToFileWP.cc \
+#                        UVPPVDInput.cc         \
                         AID-uvplot-Registry.cc
 #                       UVPCorrelationDataCache.cc \
 #                       UVPBaselineDataCache.cc 
