--- a/trunk/StationSim/src/Makefile.am
+++ b/trunk/StationSim/src/Makefile.am
@@ -20,7 +20,9 @@ WH_BandSep.h					\
 GnuPlotInterface.h				\
 WH_BeamFormer.h					\
 WH_DataReader.h					\
-WH_AWE.h
+WH_STA.h					\
+WH_WeightDetermination.h			\
+WH_Projection.h					
 
 lib_LTLIBRARIES 	= libstationsim.la
 
@@ -46,7 +48,9 @@ WH_BandSep.cc					\
 GnuPlotInterface.cc				\
 WH_BeamFormer.cc				\
 WH_DataReader.cc				\
-WH_AWE.cc
+WH_STA.cc					\
+WH_WeightDetermination.cc			\
+WH_Projection.cc
 
 bin_PROGRAMS		= Simulate
 Simulate_SOURCES 	= Simulate.cc Simulate.in
