--- a/CEP/CPA/uvplot/test/Makefile.am
+++ b/CEP/CPA/uvplot/test/Makefile.am
@@ -1,4 +1,6 @@
-bin_PROGRAMS   := mstouvp
+bin_PROGRAMS   := uvplot mstouvp
+
+
 #mstopvd_SOURCES := mstopvd.cc
 #mstopvd_DEPENDENCIES := $(top_builddir)/src/libuvplot.la $(LOFAR_DEPEND)
 #mstopvd_LDADD := $(top_builddir)/src/libuvplot.la
@@ -6,6 +8,24 @@ bin_PROGRAMS   := mstouvp
 #kuvplot_SOURCES      := kuvplot_main.cc UVPKarmaViewer.cc
 #kuvplot_DEPENDENCIES := $(top_builddir)/src/libuvplot.la $(LOFAR_DEPEND)
 #kuvplot_LDADD        := -L/usr/X11R6/lib -L$(KARMABASE)/lib -lkarmawidgets -lkarmagraphics -lkarma -lkarmaXt -lkarmaX11 -lXt -lX11 -lXaw -lpthread $(top_builddir)/src/libuvplot.la
+
+
+
+uvplot_SOURCES := main.cc \
+                  UVPMainWindow.cc   UVPMainWindow.moc.cc  \
+                  UVPDisplayArea.cc  UVPDisplayArea.moc.cc \
+                  UVPGraphSettingsWidget.cc UVPGraphSettingsWidget.moc.cc \
+                  UVPTimeFrequencyPlot.cc UVPTimeFrequencyPlot.moc.cc \
+                  UVPUVCoverageArea.cc UVPUVCoverageArea.moc.cc
+
+
+uvplot_LDADD        := $(top_builddir)/src/libuvplot.la
+uvplot_DEPENDENCIES := $(top_builddir)/src/libuvplot.la $(LOFAR_DEPEND)
+
+# Your package's subdirectory
+#UVPLOT_DIR := $(top_srcdir)/src
+
+
 
 mstouvp_SOURCES := mstouvp.cc
 mstouvp_DEPENDENCIES := $(top_builddir)/src/libuvplot.la $(LOFAR_DEPEND)
@@ -15,7 +35,7 @@ mstouvp_LDADD := $(top_builddir)/src/libuvplot.la
 # Your package's subdirectory
 #mstopvd_DIR := $(top_srcdir)/test
 
-CXXFLAGS += -g -DDEBUG_MODE=1 -I$(KARMABASE)/include
+CXXFLAGS += -DDEBUG_MODE=1 -I$(KARMABASE)/include
 
 
 
