--- a/CEP/CPA/uvplot/configure.in
+++ b/CEP/CPA/uvplot/configure.in
@@ -65,7 +65,7 @@ lofar_PACKAGE(Common)
 lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
 lofar_PACKAGE(DMI)
 dnl lofar_PACKAGE(CEP/CPA/VisCube)
-dnl lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
+lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
 
 dnl
 dnl Output Makefiles
