--- a/CEP/CPA/OCTOPUSSY/src/Makefile.am
+++ b/CEP/CPA/OCTOPUSSY/src/Makefile.am
@@ -8,7 +8,7 @@ liboctopussy_la_SOURCES = Dispatcher.cc  Message.cc  MsgAddress.cc  \
 	WPInterface.cc WorkProcess.cc OctopussyDebugContext.cc \
   GWClientWP.cc GWServerWP.cc GatewayWP.cc MTGatewayWP.cc MTGatewayWP2.cc \
   LoggerWP.cc LatencyVector.cc OctopussyConfig.cc \
-  Subscriptions.cc ReflectorWP.cc \
+  Subscriptions.cc ReflectorWP.cc AppRegistry.cc AppManagerWP.cc \
   AID-OCTOPUSSY-Registry.cc
   
 
