--- a/trunk/CEP/CPA/uvplot/Makefile.am
+++ b/trunk/CEP/CPA/uvplot/Makefile.am
@@ -13,7 +13,7 @@ MAPBUILDER := $(dmi_dir)/src/build_aid_maps.pl
 BASELISTDIR := $(lofar_sharedir)/..
 
 # Your package's subdirectory
-AID_DIR := $(top_srcdir)/src
+AID_DIR := $(top_srcdir)/test
 
 aids:
 	$(MAPBUILDER) `find $(BASELISTDIR) -name \*.aidlist` $(AID_DIR)/*.h 
