%[BugId: 136]% Revised AppControl and SolverControl agents; added MSVisOutputAgent. Working on OctoAgents.

--- a/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
@@ -2,7 +2,9 @@ dmi_dir = $(lofar_sharedir)/../DMI
 
 lib_LTLIBRARIES = libappagent.la
 
-libappagent_la_SOURCES = AID-AppAgent-Registry.cc
+libappagent_la_SOURCES = \
+  AID-AppAgent-Registry.cc \
+  AppControlAgent.cc
   
 
 # script used to generate AID maps
