--- a/trunk/CEP/CPA/PSS3/CAL/test/Makefile.am
+++ b/trunk/CEP/CPA/PSS3/CAL/test/Makefile.am
@@ -1,19 +1,23 @@
-check_PROGRAMS 		= tWSRT filluvw
+check_PROGRAMS 		= tCAL filluvw uvw
 
-TESTS			= tWSRT filluvw
+TESTS			= tCAL filluvw uvw
 
-tWSRT_SOURCES 		= tWSRT.cc 
-tWSRT_LDADD		= ../src/libcal.la
-tWSRT_DEPENDENCIES	= ../src/libcal.la $(LOFAR_DEPEND)
+tCAL_SOURCES 		= tCAL.cc 
+tCAL_LDADD		= ../src/libcal.la
+tCAL_DEPENDENCIES	= ../src/libcal.la $(LOFAR_DEPEND)
 
 filluvw_SOURCES 	= filluvw.cc 
 filluvw_DEPENDENCIES	= $(LOFAR_DEPEND)
 
+uvw_SOURCES	 	= uvw.cc 
+uvw_DEPENDENCIES	= $(LOFAR_DEPEND)
+
 include $(lofar_sharedir)/Makefile.common
 
-# MPE_LOG_FORMAT=SLOG $(lofar_sharedir)/profiletool tWSRT
-profile: tWSRT
-	MPIBIN=$(MPIBIN) MPE_LOG_FORMAT=CLOG $(lofar_sharedir)/profiletool tWSRT \
-		$(MPIBIN)/mpirun -np 1 ./tWSRT \
-		$(lofar_sharedir)/../data/pss1.demo/pss1.demo 0 0 predict 5
+# MPE_LOG_FORMAT=SLOG $(lofar_sharedir)/profiletool tCAL
+profile: tCAL
+	MPIBIN=$(MPIBIN) MPE_LOG_FORMAT=CLOG $(lofar_sharedir)/profiletool tCAL \
+		$(MPIBIN)/mpirun -np 1 ./tCAL \
+		$(lofar_sharedir)/../data/pss1.demo/pss1.demo 0 0 LOFAR predict 5
+
 
