--- a/trunk/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
+++ b/trunk/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
@@ -4,6 +4,9 @@ lib_LTLIBRARIES = libappagent.la
 
 libappagent_la_SOURCES = \
   AID-AppAgent-Registry.cc \
+  AppAgent.cc \
+  AppEventSink.cc \
+  AppEventAgentBase.cc \
   AppControlAgent.cc
   
 
