%[BugId: 151]% Major revision of whole AppAgent hierarchy. Split event stuff into a separate EventSink hierarchy, etc.

--- a/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
@@ -4,6 +4,9 @@ lib_LTLIBRARIES = libappagent.la
 
 libappagent_la_SOURCES = \
   AID-AppAgent-Registry.cc \
+  AppAgent.cc \
+  AppEventSink.cc \
+  AppEventAgentBase.cc \
   AppControlAgent.cc
   
 
