--- a/CEP/CPA/AppAgent/MSVisAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/MSVisAgent/src/Makefile.am
@@ -3,8 +3,8 @@ dmi_dir = $(lofar_sharedir)/../DMI
 lib_LTLIBRARIES = libmsvisagent.la
 
 libmsvisagent_la_SOURCES = \
-  MSVisInputAgent.cc \
-  MSVisOutputAgent.cc \
+  MSInputAgent.cc \
+  MSOutputAgent.cc \
   MSVisAgentDebugContext.cc \
   AID-MSVisAgent-Registry.cc
 
