%[BugId: 151]% Added AppEventFlag for proper event multiplexing between agents

--- a/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
@@ -7,6 +7,7 @@ libappagent_la_SOURCES = \
   AppAgent.cc \
   AppEventSink.cc \
   AppEventAgentBase.cc \
+  AppEventFlag.cc \
   AppControlAgent.cc
   
 
