--- a/trunk/CEP/CPA/GSM/configure.in
+++ b/trunk/CEP/CPA/GSM/configure.in
@@ -55,6 +55,7 @@ lofar_DEBUG_OPTIMIZE
 lofar_QATOOLS
 lofar_DOCXX
 lofar_AIPSPP(1)
+lofar_MPI(0)
 lofar_PACKAGE(Common)
 lofar_PACKAGE(CEP/CPA/MNS)
 
