--- a/trunk/CEP/CPA/AppAgent/AppUtils/Makefile.am
+++ b/trunk/CEP/CPA/AppAgent/AppUtils/Makefile.am
@@ -2,6 +2,6 @@ SUBDIRS=src test
 
 aids:
 	(cd src && make aids)
-	(cd test && make aids)
+#	(cd test && make aids)
 
 include $(lofar_sharedir)/Makefile.common
