--- a/trunk/CEP/Tools/PerfTest/P2Perf/configure.in
+++ b/trunk/CEP/Tools/PerfTest/P2Perf/configure.in
@@ -53,11 +53,10 @@ dnl
 lofar_DEBUG_OPTIMIZE
 lofar_CORBA
 lofar_MATLAB
-lofar_AIPSPP
 lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
-lofar_PACKAGE(BaseSim)
+lofar_PACKAGE(CEP/CEPFrame)
 
 dnl
 dnl Output Makefiles
