--- a/trunk/CEP/Tools/PerfTest/P2Perf/src/Makefile.am
+++ b/trunk/CEP/Tools/PerfTest/P2Perf/src/Makefile.am
@@ -3,20 +3,16 @@ P2Perf_CXXFLAGS	=
 
 DOCHDRS 	=				\
 DH_GrowSize.h					\
-DH_IntArray.h					\
 P2Perf.h					\
 StopWatch.h					\
-WH_GrowSize.h					\
-WH_Square.h
+WH_GrowSize.h					
 
 P2Perf_SOURCES  	= $(DOCHDRS)		\
 DH_GrowSize.cc					\
-DH_IntArray.cc					\
 P2Perf.cc					\
 Simulate.cc					\
 StopWatch.cc					\
-WH_GrowSize.cc					\
-WH_Square.cc					
+WH_GrowSize.cc					
 
 P2Perf_DEPENDENCIES = $(LOFAR_DEPEND)
 
