--- a/trunk/CEP/CPA/uvplot/configure.in
+++ b/trunk/CEP/CPA/uvplot/configure.in
@@ -62,11 +62,11 @@ lofar_BLITZ(1)
 lofar_QT(1)
 lofar_PACKAGE(Common)
 
-lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
-lofar_PACKAGE(DMI)
+dnl vdm lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
+dnl vdm lofar_PACKAGE(DMI)
 dnl lofar_PACKAGE(CEP/CPA/VisCube)
-lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
-lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
+dnl vdm lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
+dnl vdm lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
 
 dnl
 dnl Output Makefiles
