--- a/trunk/CEP/Demo/Pipeline/configure.in
+++ b/trunk/CEP/Demo/Pipeline/configure.in
@@ -56,7 +56,7 @@ lofar_MATLAB
 lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
-lofar_PACKAGE(BaseSim)
+lofar_PACKAGE(CEP/CEPFrame)
 
 dnl
 dnl Output Makefiles
