--- a/CEP/CPA/AppAgent/AppUtils/src/Makefile.am
+++ b/CEP/CPA/AppAgent/AppUtils/src/Makefile.am
@@ -3,7 +3,7 @@ dmi_dir = $(lofar_sharedir)/../DMI
 lib_LTLIBRARIES = libapputils.la
 
 libapputils_la_SOURCES = \
-  ApplicationBase.cc VisRepeater.cc AID-AppUtils-Registry.cc
+  ApplicationBase.cc VisPipe.cc VisRepeater.cc AID-AppUtils-Registry.cc
 
 # script used to generate AID maps
 MAPBUILDER = $(dmi_dir)/src/build_aid_maps.pl 
