--- a/trunk/CEP/CPA/AppAgent/Makefile
+++ b/trunk/CEP/CPA/AppAgent/Makefile
@@ -8,3 +8,10 @@ check:
   
 aids:
 	$(foreach dir,$(DIRS),(cd $(dir)/build/gnu3_debug && make aids)&&) echo done
+
+.PHONY: config configure
+
+config: configure
+
+configure:
+	$(foreach dir,$(DIRS),(cd $(dir) && ./bootstrap && cd build/gnu3_debug && ../../lofarconf)&&) echo done
