--- a/CEP/CPA/AppAgent/Solver/configure.in
+++ b/CEP/CPA/AppAgent/Solver/configure.in
@@ -55,7 +55,7 @@ lofar_BLITZ(1)
 lofar_AIPSPP(1)
 lofar_QATOOLS
 lofar_DOCXX
-dnl lofar_PACKAGE(DMI)
+lofar_PACKAGE(CEP/CPA/OCTOGlish)
 lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
 lofar_PACKAGE(CEP/CPA/AppAgent/AppUtils)
 
