--- a/CEP/CPA/uvplot/configure.in
+++ b/CEP/CPA/uvplot/configure.in
@@ -52,21 +52,18 @@ dnl Check for LOFAR specific things
 dnl
 lofar_DEBUG_OPTIMIZE
 lofar_CORBA
-dnl lofar_MATLAB
-dnl lofar_MPI
 lofar_QATOOLS
 lofar_DOCXX
-dnl lofar_BASESIM
 lofar_AIPSPP(1)
 lofar_BLITZ(1)
 lofar_QT(1)
 lofar_PACKAGE(Common)
 
-dnl vdm lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
-dnl vdm lofar_PACKAGE(DMI)
-dnl lofar_PACKAGE(CEP/CPA/VisCube)
-dnl vdm lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
-dnl vdm lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
+lofar_PACKAGE(CEP/CPA/OCTOPUSSY)
+lofar_PACKAGE(DMI)
+lofar_PACKAGE(CEP/CPA/VisCube)
+lofar_PACKAGE(CEP/CPA/AppAgent/MSVisAgent)
+lofar_PACKAGE(CEP/CPA/AppAgent/OctoAgent)
 
 dnl
 dnl Output Makefiles
