Revised the VisAgent tree: moved the MS read/write functions into event sinks (derived from FileSinks). Intergrated the MNS solver into Solver/. Cleaned up test programs.

--- a/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
+++ b/CEP/CPA/AppAgent/AppAgent/src/Makefile.am
@@ -9,6 +9,7 @@ libappagent_la_SOURCES = \
   AppEventAgentBase.cc \
   AppEventFlag.cc \
   AppControlAgent.cc \
+  FileSink.cc \
   BOIOSink.cc 
   
 
