--- a/CEP/CPA/AppAgent/Solver/src/Makefile.am
+++ b/CEP/CPA/AppAgent/Solver/src/Makefile.am
@@ -6,6 +6,7 @@ libsolver_la_SOURCES = \
   AID-Solver-Registry.cc \
   BaseSolver.cc \
   DummySolver.cc \
+  MeqCalSolver.cc \
   SolverControlAgent.cc \
   BatchAgent.cc
 
