--- a/CEP/BB/BreadBoard/src/selfcal/Makefile
+++ b/CEP/BB/BreadBoard/src/selfcal/Makefile
@@ -1,5 +1,5 @@
 CFLAGS+=-I/usr/include/python2.2
-CPPFLAGS+=-I/usr/include/python2.3
+CPPFLAGS+=-I/usr/local/include/python2.3
 
 %.cc:	%.cxx
 	cp $< $@
@@ -12,6 +12,7 @@ _selfcal.so:	selfcal.o selfcal_wrap.o ../SelfcalEngineStub.o
 
 clean:
 	-@rm *.o
+	-@rm *.pyc
 	-@rm _selfcal.so
 	-@rm selfcal_wrap.*
 	-@rm selfcal.py
