Changed gsm.g install dir from gsm/ to top level

--- a/CEP/CPA/GSM/src/Makefile.am
+++ b/CEP/CPA/GSM/src/Makefile.am
@@ -1,6 +1,9 @@
 
+glishmaindir = $(libexecdir)/glish
 glishdir = $(libexecdir)/glish/gsm
 
-dist_glish_SCRIPTS = gsm.g gsm_definitions.g skymodel.g skymep.g \
+dist_glishmain_SCRIPTS = gsm.g 
+  
+dist_glish_SCRIPTS = gsm_definitions.g skymodel.g skymep.g \
   meqnodes.g mep_database.g
 
